force-app/main/default/objects/Pricing_Model__c/Pricing_Model__c.object-meta.xml
<CustomObject>
    <description>Object use for each Pricing Model request.</description>
    <label>Pricing Model</label>
    <nameField>
        <displayFormat>PrM-{0000}</displayFormat>
        <label>Pricing Model Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Models</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>