force-app/main/default/objects/Pricing_Model__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales field</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pricing Models</relationshipLabel>
    <relationshipName>Pricing_Models</relationshipName>
    <type>Lookup</type>
</CustomField>