force-app/main/default/objects/Pricing_Model__c/fields/Additional_Buffer_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Buffer_Details__c</fullName>
    <description>Sales field</description>
    <label>Additional Buffer Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>