force-app/main/default/objects/Pricing_Model__c/fields/Additional_Production_Staff_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Production_Staff_Required__c</fullName>
    <description>Planning field</description>
    <label>Additional Production Staff Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>