force-app/main/default/objects/Pricing_Model__c/fields/Any_Other_Production_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Production_Requirements__c</fullName>
    <description>Planning field</description>
    <label>Any Other Production Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>