force-app/main/default/objects/Pricing_Model__c/fields/Bottle_Description__c.field-meta.xml
<CustomField>
    <fullName>Bottle_Description__c</fullName>
    <description>Sales field</description>
    <label>Bottle Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beer</fullName>
            </value>
            <value>
                <fullName>FAB</fullName>
            </value>
            <value>
                <fullName>Foods</fullName>
            </value>
            <value>
                <fullName>Mineral water</fullName>
            </value>
            <value>
                <fullName>Soft drink</fullName>
            </value>
            <value>
                <fullName>Spirits</fullName>
            </value>
            <value>
                <fullName>Wine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>