force-app/main/default/objects/Pricing_Model__c/fields/Bottle_Diameter_Major_Axis__c.field-meta.xml
<CustomField>
    <fullName>Bottle_Diameter_Major_Axis__c</fullName>
    <description>Sales field</description>
    <label>Bottle Diameter / Major Axis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>