force-app/main/default/objects/Pricing_Model__c/fields/Bottle_Height__c.field-meta.xml
<CustomField>
    <fullName>Bottle_Height__c</fullName>
    <description>Sales field</description>
    <label>Bottle Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>