force-app/main/default/objects/Pricing_Model__c/fields/Bottle_Segment__c.field-meta.xml
<CustomField>
    <fullName>Bottle_Segment__c</fullName>
    <description>Sales field</description>
    <label>Bottle Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>