force-app/main/default/objects/Pricing_Model__c/fields/Bottle_Weight_Grms__c.field-meta.xml
<CustomField>
    <fullName>Bottle_Weight_Grms__c</fullName>
    <description>Sales field</description>
    <label>Bottle Weight (gms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>