force-app/main/default/objects/Pricing_Model__c/fields/Can_the_Bottle_be_Produced__c.field-meta.xml
<CustomField>
    <fullName>Can_the_Bottle_be_Produced__c</fullName>
    <description>Sales field</description>
    <label>Can the Bottle be Produced</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>