force-app/main/default/objects/Pricing_Model__c/fields/Capital_Cost_of_Moulds__c.field-meta.xml
<CustomField>
    <fullName>Capital_Cost_of_Moulds__c</fullName>
    <description>Design field</description>
    <label>Capital Cost of Moulds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>