force-app/main/default/objects/Pricing_Model__c/fields/Cost_for_Labelling_Change_Parts__c.field-meta.xml
<CustomField>
    <fullName>Cost_for_Labelling_Change_Parts__c</fullName>
    <description>Design field</description>
    <label>Cost for Labelling Change Parts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>