force-app/main/default/objects/Pricing_Model__c/fields/Cost_per_Load__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Load__c</fullName>
    <description>Distribution field</description>
    <label>Cost per Load</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>