force-app/main/default/objects/Pricing_Model__c/fields/Customer_has_Max_Pallet_Height__c.field-meta.xml
<CustomField>
    <fullName>Customer_has_Max_Pallet_Height__c</fullName>
    <label>Customer has Max Pallet Height</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>