force-app/main/default/objects/Pricing_Model__c/fields/Customer_Pallet_Load_Preference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Pallet_Load_Preference__c</fullName>
    <label>Customer Pallet Load Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>26</fullName>
            </value>
            <value>
                <fullName>52</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>