force-app/main/default/objects/Pricing_Model__c/fields/Date_Customer_Requires_the_Bottles__c.field-meta.xml
<CustomField>
    <fullName>Date_Customer_Requires_the_Bottles__c</fullName>
    <description>Sales field</description>
    <label>Date Customer Requires the Bottles</label>
    <type>Date</type>
</CustomField>