force-app/main/default/objects/Pricing_Model__c/fields/Date_Sales_Require_a_Response__c.field-meta.xml
<CustomField>
    <fullName>Date_Sales_Require_a_Response__c</fullName>
    <description>Sales field</description>
    <label>Date Sales Require a Response</label>
    <type>Date</type>
</CustomField>