force-app/main/default/objects/Pricing_Model__c/fields/Date_submitted_by_Planning__c.field-meta.xml
<CustomField>
    <fullName>Date_submitted_by_Planning__c</fullName>
    <description>Planning field</description>
    <label>Date submitted by Planning</label>
    <type>DateTime</type>
</CustomField>