force-app/main/default/objects/Pricing_Model__c/fields/Date_Submitted_by_Sales__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_by_Sales__c</fullName>
    <description>Sales field</description>
    <label>Date Submitted by Sales</label>
    <type>DateTime</type>
</CustomField>