force-app/main/default/objects/Pricing_Model__c/fields/Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location__c</fullName>
    <label>Delivery Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABBEY - Abbeyleix - ABBEY</fullName>
            </value>
            <value>
                <fullName>ABER - Aberdeen - ABER</fullName>
            </value>
            <value>
                <fullName>GLAS - Airdrie - GLAS</fullName>
            </value>
            <value>
                <fullName>DUND - Arbroath - DUND</fullName>
            </value>
            <value>
                <fullName>BAIL - Baileborough - BAIL</fullName>
            </value>
            <value>
                <fullName>BALLY - Ballymena - BALLY</fullName>
            </value>
            <value>
                <fullName>BEL - Belfast - BEL</fullName>
            </value>
            <value>
                <fullName>BARN - Barnsley - BARN</fullName>
            </value>
            <value>
                <fullName>BEDFO - Bedford - BEDFO</fullName>
            </value>
            <value>
                <fullName>BELG - Belgium - BELG</fullName>
            </value>
            <value>
                <fullName>BIRM - Birmingham - BIRM</fullName>
            </value>
            <value>
                <fullName>BRIS - Bristol - BRIS</fullName>
            </value>
            <value>
                <fullName>BURT - Burton on Trent - BURT</fullName>
            </value>
            <value>
                <fullName>BUSH - Bushmills - BUSH</fullName>
            </value>
            <value>
                <fullName>CAM - Cambridgeshire - CAM</fullName>
            </value>
            <value>
                <fullName>WESTS - Chichester - WESTS</fullName>
            </value>
            <value>
                <fullName>CLON - Clonmel - CLON</fullName>
            </value>
            <value>
                <fullName>CUMN - Cumnock - CUMN</fullName>
            </value>
            <value>
                <fullName>DER - Derry - DER</fullName>
            </value>
            <value>
                <fullName>DEV - Devon - DEV</fullName>
            </value>
            <value>
                <fullName>DONE - Donegal - DONE</fullName>
            </value>
            <value>
                <fullName>DUB - Dublin - DUB</fullName>
            </value>
            <value>
                <fullName>DURHA - Durham - DURHA</fullName>
            </value>
            <value>
                <fullName>GLAS - East Kilbride - GLAS</fullName>
            </value>
            <value>
                <fullName>ENNI - Enniscorthy - ENNI</fullName>
            </value>
            <value>
                <fullName>FAVE - Faversham - FAVE</fullName>
            </value>
            <value>
                <fullName>GLAS - Glasgow - GLAS</fullName>
            </value>
            <value>
                <fullName>GLOUC - Gloucestershire - GLOUC</fullName>
            </value>
            <value>
                <fullName>GLAS - Grangemouth - GLAS</fullName>
            </value>
            <value>
                <fullName>HAMP - Hampshire - HAMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>