force-app/main/default/objects/Pricing_Model__c/fields/Drawing_Attached__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Attached__c</fullName>
    <label>Drawing Attached</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>