force-app/main/default/objects/Pricing_Model__c/fields/Drawing_Reference__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Reference__c</fullName>
    <label>Drawing Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>