force-app/main/default/objects/Pricing_Model__c/fields/Drawing_Used__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Used__c</fullName>
    <description>Sales field</description>
    <label>Drawing Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>