force-app/main/default/objects/Pricing_Model__c/fields/Exceptional_Packaging_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_Packaging_Requirements__c</fullName>
    <description>Sales field</description>
    <label>Exceptional Packaging Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>