force-app/main/default/objects/Pricing_Model__c/fields/Factory_Base__c.field-meta.xml
<CustomField>
    <fullName>Factory_Base__c</fullName>
    <description>Planning field</description>
    <label>Factory Base</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Elton</fullName>
            </value>
            <value>
                <fullName>Derrylin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>