force-app/main/default/objects/Pricing_Model__c/fields/For_Export__c.field-meta.xml
<CustomField>
    <fullName>For_Export__c</fullName>
    <label>For Export</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None of the volume will be exported outside of UK/ROI</fullName>
            </value>
            <value>
                <fullName>Some of the volume will be exported outside of UK/ROI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>