force-app/main/default/objects/Pricing_Model__c/fields/General_Sale_Item_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Sale_Item_Notes__c</fullName>
    <description>If yes, please detail:</description>
    <label>General Sale Item Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>