force-app/main/default/objects/Pricing_Model__c/fields/If_No_Pack_Spec_Why_Not__c.field-meta.xml
<CustomField>
    <fullName>If_No_Pack_Spec_Why_Not__c</fullName>
    <label>If No Pack Spec - Why Not</label>
    <length>255</length>
    <type>Text</type>
</CustomField>