force-app/main/default/objects/Pricing_Model__c/fields/Is_a_Trial_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Trial_Needed__c</fullName>
    <description>Planning field</description>
    <label>Is a Trial Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>