force-app/main/default/objects/Pricing_Model__c/fields/Layer_Pads_1_Planning__c.field-meta.xml
<CustomField>
    <fullName>Layer_Pads_1_Planning__c</fullName>
    <description>Planning field</description>
    <label>Layer Pads (1)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PPP11</fullName>
            </value>
            <value>
                <fullName>PPP13</fullName>
            </value>
            <value>
                <fullName>PPP14</fullName>
            </value>
            <value>
                <fullName>PPP15</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>