force-app/main/default/objects/Pricing_Model__c/fields/Layer_Pads_2_Planning__c.field-meta.xml
<CustomField>
    <fullName>Layer_Pads_2_Planning__c</fullName>
    <description>Planning field</description>
    <label>Cardboard Trays</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>PCS1</fullName>
            </value>
            <value>
                <fullName>PCS2</fullName>
            </value>
            <value>
                <fullName>PCS3</fullName>
            </value>
            <value>
                <fullName>PCS4</fullName>
            </value>
            <value>
                <fullName>PCS5</fullName>
            </value>
            <value>
                <fullName>PCS6</fullName>
            </value>
            <value>
                <fullName>PCS7</fullName>
            </value>
            <value>
                <fullName>PCS8</fullName>
            </value>
            <value>
                <fullName>PCS9</fullName>
            </value>
            <value>
                <fullName>PCS10</fullName>
            </value>
            <value>
                <fullName>PCS11</fullName>
            </value>
            <value>
                <fullName>PCS12</fullName>
            </value>
            <value>
                <fullName>PCS13</fullName>
            </value>
            <value>
                <fullName>PCS14</fullName>
            </value>
            <value>
                <fullName>PCS15</fullName>
            </value>
            <value>
                <fullName>PCS16</fullName>
            </value>
            <value>
                <fullName>PCS17</fullName>
            </value>
            <value>
                <fullName>PCS18</fullName>
            </value>
            <value>
                <fullName>PCS19</fullName>
            </value>
            <value>
                <fullName>PCS20</fullName>
            </value>
            <value>
                <fullName>PCS21</fullName>
            </value>
            <value>
                <fullName>PCS22</fullName>
            </value>
            <value>
                <fullName>PCS23</fullName>
            </value>
            <value>
                <fullName>PCS24</fullName>
            </value>
            <value>
                <fullName>PCS25</fullName>
            </value>
            <value>
                <fullName>PCS26</fullName>
            </value>
            <value>
                <fullName>PCS27</fullName>
            </value>
            <value>
                <fullName>PCS28</fullName>
            </value>
            <value>
                <fullName>PCS29</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>