force-app/main/default/objects/Pricing_Model__c/fields/Layer_Pads__c.field-meta.xml
<CustomField>
    <fullName>Layer_Pads__c</fullName>
    <description>Sales field</description>
    <label>Layer Pads</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plastic</fullName>
            </value>
            <value>
                <fullName>Cardboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>