force-app/main/default/objects/Pricing_Model__c/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <description>Planning field</description>
    <label>Line</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Factory_Base__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>A5</fullName>
            </value>
            <value>
                <fullName>A6</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B3</fullName>
            </value>
            <value>
                <fullName>B4</fullName>
            </value>
            <value>
                <fullName>B5</fullName>
            </value>
            <value>
                <fullName>B6</fullName>
            </value>
            <value>
                <fullName>B7</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
            <value>
                <fullName>F1</fullName>
            </value>
            <value>
                <fullName>F2</fullName>
            </value>
            <value>
                <fullName>F3</fullName>
            </value>
            <value>
                <fullName>F4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>