force-app/main/default/objects/Pricing_Model__c/fields/Line_Speed_BPM__c.field-meta.xml
<CustomField>
    <fullName>Line_Speed_BPM__c</fullName>
    <description>Planning field</description>
    <label>Line Speed (BPM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>