force-app/main/default/objects/Pricing_Model__c/fields/Max_Pallet_Height__c.field-meta.xml
<CustomField>
    <fullName>Max_Pallet_Height__c</fullName>
    <label>Max Pallet Height</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>