force-app/main/default/objects/Pricing_Model__c/fields/Maximum_Pallets_per_Load__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Pallets_per_Load__c</fullName>
    <description>Planning field</description>
    <label>Maximum Pallets per Load</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>