force-app/main/default/objects/Pricing_Model__c/fields/Minor_Axis__c.field-meta.xml
<CustomField>
    <fullName>Minor_Axis__c</fullName>
    <description>Sales field</description>
    <label>Minor Axis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>