force-app/main/default/objects/Pricing_Model__c/fields/Mould_life_000s_units__c.field-meta.xml
<CustomField>
    <fullName>Mould_life_000s_units__c</fullName>
    <description>Planning field</description>
    <label>Mould life (&apos;000s units)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>