force-app/main/default/objects/Pricing_Model__c/fields/Mould_Type__c.field-meta.xml
<CustomField>
    <fullName>Mould_Type__c</fullName>
    <description>Design field</description>
    <label>Mould Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cast Iron</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>