force-app/main/default/objects/Pricing_Model__c/fields/Moulds_Included__c.field-meta.xml
<CustomField>
    <fullName>Moulds_Included__c</fullName>
    <description>Sales field</description>
    <label>Moulds Included</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No. The customer pays for moulds</fullName>
            </value>
            <value>
                <fullName>Yes. Encirc pays full cost of moulds</fullName>
            </value>
            <value>
                <fullName>Yes. Encirc pays a portion of moulds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>