force-app/main/default/objects/Pricing_Model__c/fields/Moulds_to_be_Paid_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>Moulds_to_be_Paid_by_Customer__c</fullName>
    <description>Sales field</description>
    <formula>IF ( CONTAINS(TEXT(Moulds_Included__c), &quot;portion&quot;),
      Proportion_of_Moulds_to_be_Paid_by_Custo__c,
      IF ( CONTAINS(TEXT(Moulds_Included__c), &quot;Yes&quot;),
           0,
           1
      )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moulds: % to be Paid by Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>