force-app/main/default/objects/Pricing_Model__c/fields/Naked_Labelled__c.field-meta.xml
<CustomField>
    <fullName>Naked_Labelled__c</fullName>
    <description>Sales field</description>
    <label>Naked/Labelled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Naked</fullName>
            </value>
            <value>
                <fullName>PSL (Resulting price will be indicative only)</fullName>
            </value>
            <value>
                <fullName>ACL  (Resulting price will be indicative only)</fullName>
            </value>
            <value>
                <fullName>Sleeve  (Resulting price will be indicative only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>