force-app/main/default/objects/Pricing_Model__c/fields/Net_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Net_Efficiency__c</fullName>
    <description>Planning field</description>
    <label>Net Efficiency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>