force-app/main/default/objects/Pricing_Model__c/fields/New_Location__c.field-meta.xml
<CustomField>
    <fullName>New_Location__c</fullName>
    <description>Sales field</description>
    <label>New Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>