force-app/main/default/objects/Pricing_Model__c/fields/Number_of_Blanks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Blanks__c</fullName>
    <description>Design field</description>
    <label>Number of Blanks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>