force-app/main/default/objects/Pricing_Model__c/fields/Number_of_Blow_Moulds__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Blow_Moulds__c</fullName>
    <description>Design field</description>
    <label>Number of Blow Moulds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>