force-app/main/default/objects/Pricing_Model__c/fields/Number_of_Bottles_per_Pallet__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bottles_per_Pallet__c</fullName>
    <description>Planning field</description>
    <label>Number of Bottles per Pallet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>